<resources>
    <string name="app_name">MyBalance</string>
    <string name="home">Home</string>

    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="cash">Cash</string>
    <string name="cards_account">Cards Account</string>
    <string name="accounts">Accounts</string>
    <string name="database_updating">Database updating</string>
    <string name="add_an_account">Add an account</string>
    <string name="account_name">Accounts name</string>
    <string name="add">Add</string>
    <string name="to_filter">To filter</string>
    <string name="symbol">Symbol</string>
    <string name="currency_name">Name</string>
    <string name="notice1">Select the currency symbol or name:</string>
    <string name="notice_or">or</string>
    <string name="amount">Amount</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="editor_notice_2">Description (optional):</string>
    <string name="editor_notice_1">Accounts name:</string>
    <string name="editor_default">Default account</string>
    <string name="editor_save_button">Save</string>
    <string name="delete">Delete</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete1">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account">Account:</string>
    <string name="balance">Balance</string>
    <string name="all_accounts">All accts</string>
    <string name="others">Others</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="details">Details</string>
</resources>