<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_income"
        android:title="@string/income"
        android:icon="@android:color/transparent"
        />

    <item
        android:id="@+id/nav_expenses"
        android:title="@string/expenses"
        android:icon="@android:color/transparent"
        />
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:color/transparent"
        />
    <item
        android:id="@+id/nav_accounts"
        android:title="@string/accounts"
        android:icon="@android:color/transparent"
        />
    <item
        android:id="@+id/nav_notifications"
        android:title="@string/notifications"
        android:icon="@android:color/transparent"
        />


</menu>

<!--android:icon="@drawable/ic_home"-->