<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/accounts"
        android:textIsSelectable="false"

        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/plusButton"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAccs"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_newAcc" />

    <EditText
        android:id="@+id/editText_newAcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"

        android:background="@drawable/edittext"
        android:elevation="4dp"
        android:hint="@string/account_name"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        android:enabled="false"
        android:padding="1dp"
        android:text="@string/add"

        android:visibility="gone"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext"
        android:completionThreshold="1"
        android:elevation="4dp"

        android:hint="@string/symbol"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice_1" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:elevation="4dp"
        android:completionThreshold="1"

        android:hint="@string/currency_name"
        android:maxLength="30"

        android:maxLines="1"
        android:padding="12dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notice_2"
        app:layout_constraintTop_toBottomOf="@+id/notice_1" />

    <TextView
        android:id="@+id/notice_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/notice1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAccounts"
        android:visibility="gone" />

    <TextView
        android:id="@+id/notice_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/notice_or"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextView"
        app:layout_constraintStart_toEndOf="@+id/autoCompleteTextView"
        app:layout_constraintTop_toTopOf="@+id/autoCompleteTextView" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:padding="1dp"
        android:text="+"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>